<resources>
    <string name="app_name">desafio02</string>

    <string name="desafio">Desafio</string>
    <string name="description1">O Patas Dadas estará na Redenção, nesse domingo, com cães para adoção e produtos à venda!\n\nNa ocasião, teremos bottons, bloquinhos e camisetas!\n\nTraga seu Pet, os amigos e o chima, e venha aproveitar esse dia de sol com a gente e com alguns de nossos peludinhos - que estarão prontinhos para ganhar o ♥ de um humano bem legal pra chamar de seu. \n\nAceitaremos todos os tipos de doação:\n- guias e coleiras em bom estado\n- ração (as que mais precisamos no momento são sênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validade",
"image": "http://lproweb.procempa.com.br/pmpa/prefpoa/seda_news/usu_img/Papel%20de%20Parede.png</string>
    <string name="data">Data: %1$s</string>
    <string name="preco">Preço: %1$s</string>
    <string name="data_details">Data:</string>
    <string name="preco_details">Preço:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="feira_de_ado_o_de_animais_na_reden_o">Feira de adoção de animais na Redenção</string>
    <string name="voltar">Voltar</string>
    <string name="e_mail">E-mail</string>
    <string name="checkin">checkin</string>
    <string name="nome">Nome</string>
</resources>