<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_back"
                android:layout_width="97dp"
                android:layout_height="36dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_input_back"
                android:drawableStart="@drawable/ic_right_arrow"
                android:paddingHorizontal="12dp"
                android:text="@string/voltar"
                android:textColor="@color/grey_333640"
                app:cornerRadius="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/grey_7F879F" />

            <ImageView
                android:id="@+id/img_item_list"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_input_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_back" />


            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/inter_bold"
                android:text=""
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/img_item_list" />

            <LinearLayout
                android:id="@+id/container_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toStartOf="@+id/img_item_list"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_title">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/data_details"
                    android:textColor="@color/grey_7F879F"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_value_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text=""
                    android:textColor="@color/grey_666D80"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/img_item_list"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/container_data"
                app:layout_constraintTop_toTopOf="@id/container_data">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/preco_details"
                    android:textColor="@color/grey_7F879F"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_value_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text=""
                    android:textColor="@color/grey_666D80"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/container_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toStartOf="@+id/img_item_list"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/container_data"
                app:layout_constraintTop_toBottomOf="@id/container_data">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/longitude"
                    android:textColor="@color/grey_7F879F"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_value_longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text=""
                    android:textColor="@color/grey_666D80"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toStartOf="@+id/img_item_list"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/container_price"
                app:layout_constraintTop_toBottomOf="@id/container_price">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/latitude"
                    android:textColor="@color/grey_7F879F"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_value_latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:text=""
                    android:textColor="@color/grey_666D80"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/inter_medium"
                android:text=""
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/container_longitude" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintTop_toBottomOf="@id/txt_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input"
                    android:hint="@string/nome"
                    android:inputType=""
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColorHint="@color/black_4D5260"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintTop_toBottomOf="@id/input_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=""
                    android:textColorHint="@color/black_4D5260"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_menssage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_medium"
                android:text=""
                android:textColor="@color/red_DB2E36"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/input_email"
                app:layout_constraintStart_toStartOf="@id/input_email"
                app:layout_constraintTop_toBottomOf="@id/input_email" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_checkin"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@color/blue_326CF9"
                android:text="@string/checkin"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/input_email"
                app:layout_constraintStart_toStartOf="@id/input_email"
                app:layout_constraintTop_toBottomOf="@id/input_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

